--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -7,9 +7,7 @@
     align-content: center;
     justify-content: center;
     justify-items: center;
-    grid-row-gap: 2rem;
-
-    
+    row-gap: 2rem;
 
     &__list {
         display: grid;
