--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -112,7 +112,7 @@ body {
   display: grid;
   grid-template-rows: 1fr min-content 6rem 1fr;
   grid-template-columns: max-content;
-  grid-row-gap: 1.5rem;
+  row-gap: 1.5rem;
   justify-content: center; }
   .header__logo {
     height: 3rem;
@@ -123,7 +123,7 @@ body {
   .header__seenon-text {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
-    grid-column-gap: 1.5rem;
+    column-gap: 1.5rem;
     align-items: center;
     font-size: 1.6rem;
     color: #f9f7f6;
@@ -136,7 +136,7 @@ body {
   .header__seenon-logos {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-column-gap: 3rem;
+    column-gap: 3rem;
     justify-items: center; }
     .header__seenon-logos img {
       height: 2.5rem;
@@ -150,7 +150,7 @@ body {
   align-content: center;
   justify-content: center;
   justify-items: center;
-  grid-row-gap: 2rem; }
+  row-gap: 2rem; }
   .realtors__list {
     display: grid;
     grid-template-columns: min-content max-content;
@@ -171,14 +171,14 @@ body {
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 6rem;
+  gap: 6rem;
   align-items: start; }
 
 .feature {
   display: grid;
   grid-template-columns: min-content 1fr;
-  grid-row-gap: 1.5rem;
-  grid-column-gap: 1.5rem; }
+  row-gap: 1.5rem;
+  column-gap: 1.5rem; }
   .feature__icon {
     fill: #c69963;
     width: 4.5rem;
@@ -229,13 +229,13 @@ body {
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  grid-gap: 7rem; }
+  gap: 7rem; }
 
 .home {
   background-color: #f9f7f6;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-row-gap: 3.5rem; }
+  row-gap: 3.5rem; }
   .home__img {
     width: 100%;
     grid-row: 1 / 2;
