--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -6,15 +6,15 @@
     display: grid;
     //grid-template-columns: repeat(3, 1fr);
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    grid-gap: 6rem;
+    gap: 6rem;
     align-items: start;
 }
 
 .feature {
     display: grid;
     grid-template-columns: min-content 1fr;
-    grid-row-gap: 1.5rem;
-    grid-column-gap: 1.5rem;
+    row-gap: 1.5rem;
+    column-gap: 1.5rem;
 
     &__icon {
         fill: $color-primary;
