--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -4,7 +4,7 @@
 
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    grid-gap: 7rem;
+    gap: 7rem;
 }
 
 .home {
@@ -12,7 +12,7 @@
 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-row-gap: 3.5rem;
+    row-gap: 3.5rem;
 
     &__img {
         width: 100%;
